# AI_Recruitment_Agent

./: Dockerfile  README.md  appbackup.py  main.py  maincopy.py  pyproject.toml  requirements.txt  setup.py  streamlit_app.py
ai_recuritment_agent/: main.py  pyproject.toml
output/: AI_Recruitment_Agent_2025-07-12_19-45-22.md  AI_Recruitment_Agent_2025-07-12_19-49-43.md  AI_Recruitment_Agent_2025-07-12_19-50-59.md  AI_Recruitment_Agent_2025-07-12_20-01-57.md  AI_Recruitment_Agent_2025-07-12_20-04-14.md  AI_Recruitment_Agent_2025-07-12_21-17-57.md  AI_Recruitment_Agent_2025-07-13_08-53-13.md  AI_Recruitment_Agent_2025-07-13_15-12-07.md  AI_Recruitment_Agent_2025-07-13_15-12-43.md  AI_Recruitment_Agent_2025-07-13_15-13-51.md  AI_Recruitment_Agent_2025-07-13_15-15-18.md  AI_Recruitment_Agent_2025-07-13_15-15-58.md
prompt_library/: prompt.py
templates/: home.html  index.html
utils/: save_to_document.py
