[project]
name = "ai-trip-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinker==1.7.0",
    "click==8.1.7",
    "fastapi>=0.116.0",
    "flask==3.0.0",
    "flask-cors==4.0.0",
    "httpx>=0.28.1",
    "itsdangerous==2.1.2",
    "jinja2==3.1.2",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-experimental>=0.3.4",
    "langchain-google-community[places]>=2.0.7",
    "langchain-groq>=0.3.5",
    "langchain-openai>=0.3.27",
    "langchain-tavily>=0.2.7",
    "langgraph>=0.5.2",
    "markupsafe==2.1.3",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "python-dotenv==1.0.0",
    "requests>=2.32.4",
    "streamlit>=1.46.1",
    "uvicorn>=0.35.0",
    "werkzeug==3.0.1",
]

[tool.uv.workspace]
members = [
    "ai_recuritment_agent",
]
